ADO.NET - SQL Injection. Data Access Layer

--- a/practik_a3/App.config
+++ b/practik_a3/App.config
@@ -2,5 +2,5 @@
 <configuration>
 	<connectionStrings>
 		<add name="SalesConnection" connectionString="Data Source = DESKTOP-B6M267U\SQLEXPRESS; Initial Catalog = Sales; Integrated Security = true; TrustServerCertificate = True;"/>
-	</conectionString>
+	</connectionStrings>
 </configuration>
